Fixed footer visibility

--- a/css/core/shared.css
+++ b/css/core/shared.css
@@ -121,6 +121,7 @@ input:disabled {
   right: 0;
   justify-content: space-between;
   align-items: flex-end;
+  z-index: -1;
 }
 
 .footer * {
